[package]
name = "slicec-cs"
version = "0.4.0"
authors = ["ZeroC Inc."]
description = """
The slicec-cs compiler, for compiling Slice files into C# code.
"""
keywords = ["slice", "ice", "icerpc"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
clap = { version = "~4.3.20", features = ["derive"] }
convert_case = "0.6.0"
in_definite = "1.0.0"
slicec = "0.3.1"

[dev-dependencies]
test-case = "3.3.1"

[[bin]]
name = "slicec-cs"
path = "src/main.rs"
