[package]
name = "slicec-cs"
version = "0.5.0-preview.1"
authors = ["ZeroC Inc."]
description = """
The slicec-cs compiler, for compiling Slice files into C# code.
"""
keywords = ["slice", "ice", "icerpc"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
convert_case = "0.10.0"
in_definite = "1.1.2"
slicec = "0.3.3"

[dev-dependencies]
test-case = "3.3.1"

[[bin]]
name = "slicec-cs"
path = "src/main.rs"
